
ADD_EXECUTABLE(insertion_sort sort/insertion_sort.cc)
ADD_EXECUTABLE(fast_sort      sort/fast_sort.cc)
ADD_EXECUTABLE(heap_sort      sort/heap_sort.cc)
ADD_EXECUTABLE(merge_sort     sort/merge_sort.cc)

ADD_EXECUTABLE(max_subarray   introduction_to_algorithms/max_subarray.cc)
ADD_EXECUTABLE(num_inversions introduction_to_algorithms/num_inversions.cc)